# Licence-System

./: .gitignore  docker-compose.yml  pyproject.toml
app/: alembic.ini  create_fastapi_app.py  main.py
app/api/: __init__.py
app/api/licences/: views.py
app/api/products/: views.py
app/core/: config.py
app/core/auth/: backend.py  database.py  fastapi_users.py  manager.py
app/core/models/: __init__.py  base.py  db_helper.py  licence.py  product.py  user.py
app/core/models/mixins/: int_id_pk.py
app/core/schemas/: licence.py  products.py  user.py
app/core/utils/: keygen.py
app/crud/: licences.py  products.py
app/migrations/: env.py
app/migrations/versions/: 2c08a17a93dc_add_frozen_state.py  2f7e7f4c81a3_initial_clean_schema.py  6c08244638c1_create_licenses_table.py  75b3c462900d_initial_auth_and_tables.py
